# fsl_gotSportScrapper

./: README.md  lambda_function.py  main.py  pyproject.toml
.github/workflows/: main.yml  main_2.yml
fsl_gotSportScrapper_data/charset_normalizer-3.0.1.dist-info/: RECORD
